# FluidFramework

./: package.json  pnpm-lock.yaml
api-report/: container-runtime.api.md  runtime-definitions.api.md
examples/data-objects/clicker/: package.json  webpack.config.js
experimental/PropertyDDS/examples/partial-checkout/: webpack.config.js
experimental/PropertyDDS/examples/property-inspector/: webpack.config.js
experimental/dds/tree2/: package.json  tsconfig.json
experimental/dds/tree2/src/: index.ts  internal.ts
experimental/dds/tree2/src/codec/: index.ts  noopValidator.ts
experimental/dds/tree2/src/core/: index.ts
experimental/dds/tree2/src/events/: index.ts
experimental/dds/tree2/src/feature-libraries/: contextuallyTyped.ts  deltaUtils.ts  fakeRepairDataStore.ts  forestSummarizer.ts  index.ts  memoizedIdRangeAllocator.ts  schemaBuilder.ts  (+3 more)
wasm/: Cargo.toml  pnpm-lock.yaml  wasm-pack-crate.js
wasm/client-wasm/: Cargo.toml
wasm/distributed-id-allocator/: Cargo.toml
wasm/distributed-id-allocator/src/: compressor.rs  lib.rs
wasm/distributed-id-allocator/src/compressor/: persistence.rs  persistence_utils.rs  tables.rs
wasm/distributed-id-allocator/src/compressor/tables/: final_space.rs  session_space.rs  session_space_normalizer.rs
wasm/distributed-id-allocator/src/compressor/tables/session_space_normalizer/: persistence.rs
wasm/distributed-id-allocator/tests/: compressor_unit_tests.rs
wasm/distributed-id-allocator/tests/compressor_test_utils/: mod.rs
wasm/id-types/: Cargo.toml
wasm/id-types/src/: compressed_id.rs  errors.rs  final_id.rs  lib.rs  local_id.rs  op_space_id.rs  session_id.rs  session_space_id.rs  stable_id.rs
wasm/typescript/typescript-id-allocator/: .eslintrc.js  .prettierignore  package-lock.json  package.json  tsconfig.eslint.json
wasm/typescript/typescript-id-allocator/src/: IdCompressor.ts  index.ts  utilities.ts
wasm/typescript/typescript-id-allocator/src/copied-utils/: assert.ts  index.ts
wasm/typescript/typescript-id-allocator/src/test/copied-utils/stochastic/: performActions.ts  random.ts
wasm/typescript/typescript-id-allocator/src/test/id-compressor/: idCompressor.perf.spec.ts  idCompressor.spec.ts  idCompressorTestUtilities.ts  testCommon.ts
wasm/typescript/typescript-id-allocator/src/types/: idCompressor.ts  identifiers.ts  index.ts
wasm/typescript/typescript-id-allocator/src/types/persisted-types/: 0.0.1.ts  index.ts
wasm/wasm-id-allocator/: Cargo.toml
wasm/wasm-id-allocator/src/: lib.rs
wasm/web-packages/wasm-id-allocator/: package.json
(+128 files in other folders)
