[workspace]
members = ["./fluid-wasm-add", "./fluid-wasm-subtract", "./distributed-id-allocator", "./id-types", "wasm-id-allocator", "./client-wasm"]

[workspace.metadata]
fluid-wasm-output-bundles = ["./client-wasm"]

[profile.release]
debug = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
