[package]
name = "wasm-id-allocator"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"
description = "wasm id allocator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
distributed-id-allocator = { path = "../distributed-id-allocator", version = "0.1", default-features = false }
id-types = { path = "../id-types", version = "0.1", default-features = false }
lol_alloc = "0.4.0"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false